# hello-world-by-polkadot

./: .gitignore  README.md
frame-development/: README.md  stakingPayouts.py
frame-development/chainlink-pricefeed/: Cargo.toml  lib.rs
frame-development/charity-raffle/: Cargo.toml  lib.rs
frame-development/front-end/: README.md  package.json
frame-development/front-end/src/: AccountSelector.js  App.js  Balances.js  CharityRaffle.js  CharityRaffleContract.js  CharityRaffleMetadata.json  EstimatedExtrinsics.js  HackathonDetails.js  KdtBalances.js  KdtContract.js  KdtMetadata.json  KdtTransfer.js  LastBlockInfos.js  NodeInfo.js  PersonalShipmentTransaction.js  PersonalShipmentTransactionContract.js  PersonalShipmentTransactionMetadata.json
frame-development/front-end/src/config/: development.json  production.json
frame-development/front-end/src/substrate-lib/: FakeSign.js  SideCar.js  Transactions.js
frame-development/kdt/: Cargo.toml  lib.rs
frame-development/node/: Dockerfile
frame-development/node/node/src/: chain_spec.rs
frame-development/node/pallets/nft-token/: Cargo.toml
frame-development/node/runtime/: Cargo.toml
frame-development/personal-shipment-transaction/: Cargo.toml  lib.rs
frame-development/shipment-tracking-external-adapter/: .envrc  index.js
frame-development/shipment-tracking-external-adapter/test/: index_test.js
moonbeam/: LTKToken.sol  README.md  checkContract.sol
moonbeam/truffle/: README.md
phala/: README.md
plasm-solidity-contract/: flipper.md
private-network/: README.md
use-api-backend/: main.js  package.json
(+6 files in other folders)
